@@ -2,8 +2,13 @@ package com.lmontes.globallogictest.config;
 
 import com.lmontes.globallogictest.dto.ErrorResponse;
 import com.lmontes.globallogictest.exception.LoginException;
-import jakarta.validation.ConstraintViolation;
-import jakarta.validation.ConstraintViolationException;
+//import jakarta.validation.ConstraintViolation;
+//import jakarta.validation.ConstraintViolationException;
+import javax.validation.ConstraintViolation;
+import javax.validation.ConstraintViolationException;
+import javax.validation.constraints.*;
+import javax.persistence.*;
+import lombok.*;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
@@ -14,6 +19,8 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 
 import java.sql.Timestamp;
 import java.util.List;
+import java.util.stream.Collectors;
+
 
 @Slf4j
 @ControllerAdvice
@@ -25,16 +32,12 @@ public class ExceptionControllerAdvice {
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(errorResponse);
     }
 
-    @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ErrorResponse> handleValidationException(MethodArgumentNotValidException ex) {
-        log.info(ex.getBindingResult().getFieldError().getDefaultMessage());
-        ErrorResponse errorResponse = new ErrorResponse(new Timestamp(System.currentTimeMillis()), ex.getStatusCode().value(), ex.getBindingResult().getFieldError().getDefaultMessage());
-        return ResponseEntity.status(ex.getStatusCode().value()).body(errorResponse);
-    }
-
     @ExceptionHandler(ConstraintViolationException.class)
     public ResponseEntity<ErrorResponse> handleValidationException(ConstraintViolationException ex) {
-        List messages = ex.getConstraintViolations().stream().map(ConstraintViolation::getMessage).toList();
+        List<String> messages = ex.getConstraintViolations()
+                .stream()
+                .map(ConstraintViolation::getMessage)
+                .collect(Collectors.toList());
         log.info(messages.toString());
         ErrorResponse errorResponse = new ErrorResponse(new Timestamp(System.currentTimeMillis()),
                 HttpStatus.BAD_REQUEST.value(),
